--- a/Park.ly/Park.ly/Base.lproj/Main.storyboard
+++ b/Park.ly/Park.ly/Base.lproj/Main.storyboard
@@ -33,6 +33,9 @@
                                     <constraint firstAttribute="height" constant="75" id="bpi-mp-mIP"/>
                                 </constraints>
                                 <state key="normal" image="parkCar"/>
+                                <connections>
+                                    <action selector="onPressedParkButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="c0q-Ue-eEK"/>
+                                </connections>
                             </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="park.ly-logo" translatesAutoresizingMaskIntoConstraints="NO" id="U1M-L8-bKu" customClass="ShadowImage" customModule="Park_ly" customModuleProvider="target">
                                 <rect key="frame" x="16" y="20" width="343" height="120"/>
@@ -54,6 +57,10 @@
                             <constraint firstItem="era-Kq-IVC" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="se9-Uh-4vN"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="mapView" destination="era-Kq-IVC" id="sAe-af-U8d"/>
+                        <outlet property="parkButton" destination="BA2-mC-ZfG" id="rl5-9h-imD"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
